syntax = "proto3";

package starknet.v1;

message Event {
  string json_description = 1;
}



message InvoiceContractEvent {
  string block_id = 1;
  string tx_hash = 2;
  uint64 event_index = 3;
  string payee = 4;
  string asset = 5;
  string invoice_id = 6;
  string payer = 7;
  string amount_low = 8;
  string amount_high = 9;
}

message Events {
  repeated InvoiceContractEvent events = 1;
}