syntax = "proto3";

package starknet.v1;

message BlockMeta {
  uint64 height = 2; 
}

message PaymentEvent {
  uint64 index = 2;
  string payee = 3;
  string asset = 4;
  string invoice_id = 5;
  string payer = 6;
  string amount_low = 7;
  string amount_high = 8;
}

message Events {
  repeated PaymentEvent events = 1;
}
